Fix for Entrance Animations
This was way simpler than I made it out to be. The animated elements just needed their initial (not visible) state to be declared somewhere, so that the actual animation classes would only take effect after the JS applied them.

Closes #11

--- a/wp-content/themes/benmiles-wp/assets/css/custom.css
+++ b/wp-content/themes/benmiles-wp/assets/css/custom.css
@@ -178,6 +178,7 @@ b, strong {
 .animated {
 	animation-duration: 1s;
 	animation-fill-mode: both;
+	opacity: 0;
 }
 .fadeIn {
 	animation-name: fadeIn;
